/*
 * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
 * agreements. See the NOTICE file distributed with this work for additional information regarding
 * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance with the License. You may obtain a
 * copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */

/*
* These ProtoBuf files are part of an experimental interface.
* Use this interface at your own risk.
*/

syntax = "proto3";
package org.apache.geode.internal.protocol.protobuf.v1;

import "v1/basicTypes.proto";

message PutRequest {
    string regionName = 1;
    Entry entry = 2;
}

message PutResponse {
    // message presence indicates success.
}

message GetRequest {
    string regionName = 1;
    EncodedValue key = 2;
}

message GetResponse {
    EncodedValue result = 1;
}

message PutAllRequest {
    string regionName = 1;
    repeated Entry entry = 2;
}

message PutAllResponse {
    repeated KeyedError failedKeys = 1;
}

message GetAllRequest {
    string regionName = 1;
    repeated EncodedValue key = 2;
    EncodedValue callbackArg = 3;
}

message GetAllResponse {
    repeated Entry entries = 1;
    repeated KeyedError failures = 2;
}

message RemoveRequest {
    string regionName = 1;
    EncodedValue key = 2;
}

message RemoveResponse {
}

message RemoveAllRequest {
    string regionName = 1;
    repeated EncodedValue key = 2;
}

message RemoveAllResponse {
    bool success = 1;
}

message GetRegionNamesRequest {

}

message GetRegionNamesResponse {
    repeated string regions = 1;
}

message GetRegionRequest {
    string regionName = 1;
}

message GetRegionResponse {
    Region region = 1;
}
